# cppCube

./: CMakeLists.txt  README.md  common.cpp  common.h  cube.cpp  cube.h  donut.cpp  donut.h  gesture_recognition.py  gesture_wrapper.cpp  gesture_wrapper.h  main.cpp  pyramid.cpp  pyramid.h
